<resources>
    <string name="app_name">Krisk24</string>
    <string name="agora_app_id">3c43f90e857a4c4e80771185ad6bcac2</string>
    <string name="agora_access_token">0067794cb4239d649f49e8932417ce0ded0IADGp/xFVaR0/7ALkHT0ylwSNtx5ZO0AX6UTgjkIAEe6yQx+f9gAAAAAEAAHv5x5cKBOYQEAAQBvoE5h</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="krisk24">Krisk24</string>
    <string name="login">Login</string>
    <string name="forgot_password_instruction">We just need your registered Email ID to Fsend you a password reset Instruction.</string>
    <string name="continue_">Continue</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_instruction">We have sent a six digit code on your registered Email ID.</string>
    <string name="six_digit_code">6 Digit code</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="chat_voice"><![CDATA[Chat & Voice]]></string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="country_outlook">Country Outlook</string>
    <string name="security_alerts">Security Alerts</string>
    <string name="check_in">Check In</string>
    <string name="something_went_wrong">Something Went Wrong!! Try Again</string>
    <string name="no_internet">No Internet Connection!! Try Again</string>
    <string-array name="menu_list">
        <item>Home</item>
        <item>Country Outlook</item>
        <item>Security Alerts</item>
        <item>Tracking</item>
        <item>Contact</item>
        <item>Chat</item>
        <item>Check In</item>
        <item>Notification</item>
        <item>Logout</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="term_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="push_notification">Push Notifications</string>
    <string name="enable_tracking">Enable Tracking</string>
    <string name="personal_information">Personal information</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="document_uploaded">Document Uploaded</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="upload_more"><u>Upload More</u></string>
    <string name="old_password">Old Password</string>
    <string name="save">Save</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="date">Date</string>
    <string name="country">Country</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="event_overview">Event Overview</string>
    <string name="analysis">Analysis</string>
    <string name="security_advice">Security Advice</string>
    <string name="image_and_video"><![CDATA[Image & Video]]></string>
    <string name="i_am_ok">I am OK</string>
    <string name="i_need_help">I need HELP</string>
    <string name="yes">Yes</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="overview">Overview</string>
    <string name="security">Security</string>
    <string name="other">Other</string>
    <string name="alerts">Alerts</string>
    <string name="calendar">Calendar</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="official_language">Official Language</string>
    <string name="major_religion">Major Religion</string>
    <string name="currency">Currency</string>
    <string name="time_zone">Time Zone</string>
    <string name="terrorism">Terrorism</string>
    <string name="terrorism_risk_level">Terrorism\nRisk Level</string>
    <string name="crime_risk_level">Crime\nRisk Level</string>
    <string name="type">Type...</string>
    <string name="tracking">Tracking</string>
    <string name="geopolitical_risk_level">Geopolitical\nRisk Level</string>
    <string name="overall_risk_level">Overall\nRisk Level</string>
    <string name="title">Hello\nWorld!</string>
    <string name="moderate">Moderate</string>
    <string name="risk_level">Risk Level</string>
    <string name="submit">Submit</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="new_password_confirm_password_not_match">New password and confirm password not match</string>
    <string name="event_risk_level">Event Risk Level</string>
    <string name="intel_gathering">Intel Gathering</string>
    <string name="search_country">Search Country</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_document">Open Document</string>
    <string name="no_document_uploaded_yet">"No documents uploaded yet. Please, upload your documents"</string>
    <string name="style_json">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
  </string>
    <string name="clear">Clear All</string>
    <string name="minimal">Minimal</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="extreme">Extreme</string>
    <string name="social_unrest_risk_level">Social Unrest\nRisk Level</string>
    <string name="group_name">Group Name</string>
    <string name="add_members">Add Members</string>
    <string name="ok">Ok</string>
    <string name="risk_level_data_not_found">Risk level data not found.</string>
    <string name="dial_code">Dial Code</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="fire">Fire</string>
    <string name="electercity">Electricity</string>
    <string name="forecast">Forecast</string>
    <string name="test_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="search_user_and_group">Search User</string>
    <string name="calling">Calling . . .</string>
    <string name="background">Background</string>
    <string name="select_user">Select User</string>
    <string name="assign_and_leave">Assign and Leave</string>
    <string name="please_assign_admin_before_leaving_group">Please assign admin before leaving group</string>
    <string name="leave_group">Are you sure you want to leave group</string>
    <string name="admin">Admin</string>
    <string name="delete_group">Delete Group</string>
    <string name="leavegroup">Leave Group</string>
    <string name="delete_grp">Delete Group</string>
    <string name="member_count">Member Count</string>
    <string name="notification_alert">The notification Alert Sent!</string>
    <string name="remove">Remove</string>
    <string name="sure_delete_group">Are You sure you want to delete group</string>
    <string name="user_information">User Information</string>
    <string name="mobile">Mobile</string>
    <string name="default_notification_channel_id">kelmeRisk</string>
    <string name="disclaimer">Disclaimer</string>
</resources>