<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.kelme.custom.MediumTextview
                    android:id="@+id/tv_open_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_camera"
                    android:padding="@dimen/_7sdp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/primary_blue" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <com.kelme.custom.MediumTextview
                    android:id="@+id/tv_open_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_gallery"
                    android:padding="@dimen/_7sdp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/primary_blue" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <com.kelme.custom.MediumTextview
                    android:id="@+id/tv_open_document"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_document"
                    android:padding="@dimen/_7sdp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/primary_blue" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/cv_top">

            <com.kelme.custom.BoldTextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:padding="@dimen/_7sdp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/primary_blue" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>