<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.login.ResetPasswordActivity">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/icn_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:layout_marginTop="@dimen/_45sdp"
                android:src="@drawable/kelme_app_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kelme.custom.RegularTextView
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <com.kelme.custom.RegularTextView
                android:id="@+id/resetPasswordInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/reset_password_instruction"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/resetPassword" />

            <com.kelme.custom.RegularEditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:background="@drawable/edittext_background"
                android:gravity="center|start"
                android:hint="@string/six_digit_code"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordInstruction" />

            <com.kelme.custom.RegularEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:background="@drawable/edittext_background"
                android:gravity="center|start"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:visibility="gone"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/etOtp" />

            <com.kelme.custom.RegularEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:background="@drawable/edittext_background"
                android:gravity="center|start"
                android:visibility="gone"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

            <com.kelme.custom.RegularButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_fill_red"
                android:padding="@dimen/_8sdp"
                android:text="@string/verify_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>