<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.login.ForgotPasswordActivity">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_back"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_20sdp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kelme_app_logo"
                android:layout_marginTop="@dimen/_45sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kelme.custom.RegularTextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/forgot_password"
                android:gravity="center"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <com.kelme.custom.RegularTextView
                android:id="@+id/forgotPasswordInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forgot_password_instruction"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

            <com.kelme.custom.RegularEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:gravity="center|start"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:background="@drawable/edittext_background"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInstruction" />

            <com.kelme.custom.RegularButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/bg_fill_red"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>